--- a/client/index.html
+++ b/client/index.html
@@ -2,8 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Cyrus Chan" />
+    <meta name="language" content="english" />
+    <meta
+      name="description"
+      content="Discover, share, and embrace the bountiful beauty of homegrown treasures."
+    />
+    <meta property="og:title" content="YardGrown" />
+    <meta
+      property="og:description"
+      content="Discover, share, and embrace the bountiful beauty of homegrown treasures."
+    />
+    <meta property="og:images" content="/og.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="YardGrown" />
+    <meta property="og:url" content="https://yardgrown.cyruscsc.com/" />
+    <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
